# autorebase

./: .gitignore  ADAPTER_REMOVAL_SUMMARY.md  AI_DIRECT_REBASE.md  API_ENDPOINT_SUMMARY.md  README.md  README_FASTAPI.md  diff.patch  diff1.patch  example_branch_usage.py  fix_autorebase.py  force_conflict_test.py  main.py  master_prompt  pyproject.toml  pytest.ini  requirements.txt  resolve_conflict.py  run_tests.py  test_ai_resolution.py  test_api.py  test_autorebase_sample.py  test_feature.patch  test_feature_fixed.patch  test_github_repos.py  test_mcp_autorebase.py  test_mcp_validation.py  validate_patch_result.py
.github/workflows/: ci.yml
api/autorebase/: core.py  diff_patch.py  file_conflict_resolver.py  github_operations.py
api/models/: autorebase_models.py  github_models.py
api/routers/: autorebase_router.py  github_router.py
config/: repos.yaml
data/sample/: fsw0.py  sw0.py  (+3 more)
engine/: __init__.py
mcp-server/: .env.example  CURSOR_SETUP.md  README.md  cursor-mcp-config.json  mcp-http-config.json  package-lock.json  package.json  run_autorebase.py  run_autorebase_wrapper.py  test-http.js  tsconfig.json
schemas/: report.schema.json  requirements_map.schema.json
scripts/: README.md  ai_direct_rebase.sh  demo_seed.sh  import_from_config.py  import_repos.py  import_repos.sh  install_tools.sh  quick_rebase.sh  resolve_conflict.py  run_auto_rebase.sh
tests/: conftest.py  test_adapters.py  test_api.py  test_api_endpoints.py  test_autorebase.py  test_end_to_end.py  test_models.py  test_services.py  test_traceability.py
web/: next.config.js  package.json
(+118 files in other folders)
